Bug 152985 - Icon view: Cannot change row with left/right arrow keys
Summary: Icon view: Cannot change row with left/right arrow keys
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 156332 171837 185383 189098 193705 197947 254352 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-11-27 12:44 UTC by FiNeX
Modified: 2011-01-04 08:03 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
What Dolphin looks like for me when running it with "dolphin --reverse" (75.05 KB, image/png)
2009-07-05 22:58 UTC, Frank Reininghaus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2007-11-27 12:44:14 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

In konqueror 3.5.x you can navigate files using the keyboard arrows.
In dolphin you can do it too, but when you reach the last icon of a row, pressing "right" button doesn't select the first icon of the next row instead. In konqueror you can do it (in the 3.5.x).
Comment 1 FiNeX 2008-01-22 09:51:02 UTC
*** Bug 156332 has been marked as a duplicate of this bug. ***
Comment 2 Andreas Scherf 2008-07-01 21:16:21 UTC
This is implemented in KDirModel and comes from QTModelIndex it seems that is the default behavior now. But if this is wrong we have to reimplement QAbstractItemModel::createIndex ( int row, int column, void * ptr = 0 ) const
so that if the end of a column is reached it hast to return the ModelIndex for the next/prev row.
Comment 3 FiNeX 2009-02-23 21:53:45 UTC
*** Bug 185383 has been marked as a duplicate of this bug. ***
Comment 4 Frank Reininghaus 2009-02-23 23:33:53 UTC
*** Bug 171837 has been marked as a duplicate of this bug. ***
Comment 5 Frank Reininghaus 2009-04-11 13:32:37 UTC
*** Bug 189098 has been marked as a duplicate of this bug. ***
Comment 6 Frank Reininghaus 2009-05-23 09:04:14 UTC
*** Bug 193705 has been marked as a duplicate of this bug. ***
Comment 7 Frank Reininghaus 2009-06-26 13:07:58 UTC
*** Bug 197947 has been marked as a duplicate of this bug. ***
Comment 8 Dotan Cohen 2009-06-26 15:44:37 UTC
@Andreas: you mention that it "is implemented" however in KDE 4.3 beta the feature still does not work as the OP requested. Is there any progress?

Also, don't forget that for RTL users the *left* side is the end of a row, and should continue onto the *right* side of the row below.

Thanks!
Comment 9 Frank Reininghaus 2009-06-26 21:21:29 UTC
comment 2: I don't think that reimplementing QAbstractItemModel::createIndex ( int row, int column, void * ptr = 0 ) could help to fix this issue. The problem we have here is independent of the model (note that the "row" and "column" in a model are unrelated to columns and rows in Dolphin's Icons View), but rather related to the handling of the "MoveLeft" and "MoveRight" actions in QListView::moveCursor.

@Peter: I think that's a change of behaviour compared to Qt 3. Do you know if this has ever been discussed with the Qt people? If not, we could ask them to change this or at least make it configurable.
Comment 10 Peter Penz 2009-06-26 22:42:56 UTC
@Frank: I don't know whether this has been discussed with Qt people. But I agree that this would be a useful feature.
Comment 11 Peter Penz 2009-07-05 18:24:48 UTC
SVN commit 991780 by ppenz:

Wrap the cursor on the right/left side to have a similar keyboard behavior like in Konqueror for KDE 3. Thanks to Tahseen Mohammad for the patch!

No backport to KDE 4.3.x is done until the patch has proven to work well under all circumstances.

BUG: 152985
CCMAIL: tahseen.mohammad@gmail.com
CCMAIL: frank78ac@googlemail.com

 M  +79 -0     dolphiniconsview.cpp  
 M  +1 -0      dolphiniconsview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=991780
Comment 12 Dotan Cohen 2009-07-05 19:20:44 UTC
Peter, can you check how it works with the --reverse flag for RTL users? In this case, moving off the left side should go _down_ a row (and start at the right side of that row) and vice-versa for the right side.

Thanks.
Comment 13 FiNeX 2009-07-05 20:25:31 UTC
Wonderful, thanks :)
Comment 14 Frank Reininghaus 2009-07-05 22:58:51 UTC
Created attachment 35070 [details]
What Dolphin looks like for me when running it with "dolphin --reverse"

(In reply to comment #12)
> In  this case, moving off the left side should go _down_ a row (and start at 
> the right side of that row) and vice-versa for the right side.

Dotan, at the moment, it does not work that way. I was just thinking of looking into this, but I'm a bit confused: I ran "dolphin --reverse" from a Konsole, and the menu, toolbar and other things really looked reversed, but Dolphin's Icons View not (see screenshot). It's still in left-to-right mode, it seems. Does it also look like that for you? In this case, I think the current behaviour is fine. If not, I wonder what I have to do to really get Dolphin into RTL mode...
Comment 15 Dotan Cohen 2009-07-06 11:50:41 UTC
You are right, Frank, the icons should be in reverse order. I had noticed that in the past but I completely forgot. Here, I filed an issue on it:
https://bugs.kde.org/show_bug.cgi?id=199131
I suppose that until that issue is fixed, then there is nothing wrong with the current implementation of this bug. Thanks!
Comment 16 Tommi Tervo 2010-10-16 12:33:10 UTC
*** Bug 254352 has been marked as a duplicate of this bug. ***
Comment 17 Todd 2011-01-03 20:41:04 UTC
This is listed as fixed, but I am having this problem in KDE 4.6 RC 1.  I am not sure if this is a regression, and if so I don't know exactly when it started, but is definitely not working in 4.6 RC 1.  So I think this should be re-opened.
Comment 18 Peter Penz 2011-01-03 20:49:01 UTC
@Todd: Do you have enabled grouping? It works without grouping but with grouping the wrapping is not done (this must be assigned to KCategorizedView in kdelibs in this case - BTW the issue with the grouping is also there with KDE SC 4.5).
Comment 19 Todd 2011-01-03 20:51:03 UTC
Yes, I do.  It seems it is a problem with grouping.  Should I open another bug for this or is there already one?
Comment 20 Peter Penz 2011-01-03 21:59:31 UTC
It would be great if you could create a new report, as we need to assign it to kdelibs (KCategorizedView). Rafael is the maintainer, but AFAIK he has only limited time for KCategorizedView and I think I'll give it a try to fix this myself.
Comment 21 Todd 2011-01-04 08:03:11 UTC
I've made the new bug as you requested, it is bug 262038